--- a/style.css
+++ b/style.css
@@ -9,7 +9,23 @@
     --section-header-text-size: 12pt;
     --block-background-fill: transparent;
 }
-.tabs > :first-child > button:nth-child(2),button:nth-child(3),button:nth-child(4),button:nth-child(5),button:nth-child(6)
+.tabs > :first-child > button:nth-child(2)
+{
+    display: none;
+}
+.tabs > :first-child >button:nth-child(3)
+{
+display: none;
+}
+.tabs > :first-child >button:nth-child(4)
+{
+display: none;
+}
+.tabs > :first-child >button:nth-child(5)
+{
+    display: none;
+}
+.tabs > :first-child >button:nth-child(6)
 {
     display: none;
 }
